--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="container">
-      <header class="page-header" id="contacts">
+    <header class="page-header" id="contacts">
+      <div class="container header-container">
         <nav class="header-nav">
           <a class="logo header-logo" href="./index.html"
             >Web<span class="logo-part">Studio</span></a
@@ -48,18 +55,20 @@
             </li>
           </ul>
         </address>
-      </header>
-    </div>
+      </div>
+    </header>
+
     <main>
-      <div class="container">
-        <section class="hero">
+      <section class="hero">
+        <div class="container hero-container">
           <h1 class="title-hero">Effective Solutions for Your Business</h1>
           <button class="btn-hero" type="button">Order Service</button>
-        </section>
-      </div>
-      <div class="container">
-        <section class="offer">
-          <h2 class="offer-title">What we offer</h2>
+        </div>
+      </section>
+
+      <section class="offer">
+        <div class="container offer-container">
+          <h2 hidden>What we offer</h2>
           <ul class="offer-list">
             <li class="offer-item">
               <h3 class="offer-name">Strategy</h3>
@@ -90,10 +99,11 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
-      <div class="container">
-        <section class="team">
+        </div>
+      </section>
+
+      <section class="team">
+        <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
@@ -104,8 +114,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="card-content">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
 
             <li class="team-item">
@@ -116,8 +128,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="card-content">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="team-item">
@@ -128,8 +142,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="card-content">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
 
             <li class="team-item">
@@ -140,14 +156,17 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Danteam-nameel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="card-content">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
-        </section>
-      </div>
-      <div class="container">
-        <section class="portfolio" id="portfolio">
+        </div>
+      </section>
+
+      <section class="portfolio" id="portfolio">
+        <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-items">
@@ -157,8 +176,10 @@
                 alt="BankingApp"
                 width="360"
               />
-              <h3 class="portfolio-title-name">Banking App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="portfolio-t">
+                <h3 class="portfolio-title-name">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-items">
               <img
@@ -167,8 +188,10 @@
                 alt="CashlessPaymen"
                 width="360"
               />
-              <h3 class="portfolio-title-name">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-t">
+                <h3 class="portfolio-title-name">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-items">
               <img
@@ -177,8 +200,10 @@
                 alt="MeditationApp"
                 width="360"
               />
-              <h3 class="portfolio-title-name">Meditation App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="portfolio-t">
+                <h3 class="portfolio-title-name">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-items">
               <img
@@ -187,8 +212,10 @@
                 alt="TaxiService"
                 width="360"
               />
-              <h3 class="portfolio-title-name">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-t">
+                <h3 class="portfolio-title-name">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-items">
               <img
@@ -197,8 +224,10 @@
                 alt="ScreenIllustrations"
                 width="360"
               />
-              <h3 class="portfolio-title-name">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
+              <div class="portfolio-t">
+                <h3 class="portfolio-title-name">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-items">
               <img
@@ -207,15 +236,18 @@
                 alt="OnlineCourses"
                 width="360"
               />
-              <h3 class="portfolio-title-name">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-t">
+                <h3 class="portfolio-title-name">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
-    <div class="container">
-      <footer class="page-footer">
+
+    <footer class="page-footer">
+      <div class="container footer-container">
         <a class="logo footer-logo" href="./index.html"
           >Web<span class="logo-part">Studio</span></a
         >
@@ -223,7 +255,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
