--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <section class="offer">
         <div class="container offer-container">
-          <h2 class="visually-hidden">What we offer</h2>
+          <h2 class="visually-hidden"></h2>
           <ul class="offer-list">
             <li class="offer-item">
               <h3 class="offer-name">Strategy</h3>
